# semantic-naivgation

./: .gitignore  LICENSE  README.md
src/semantic_nav_bringup/: CMakeLists.txt  package.xml
src/semantic_nav_bringup/launch/: semantic_nav.launch.py
src/semantic_nav_bringup/params/: nav2_params.yaml  semantic_detector.yaml
src/semantic_nav_bringup/rviz/: semantic_nav.rviz
src/semantic_nav_bringup/worlds/: semantic_maze.sdf
src/semantic_nav_costmap_plugins/: CMakeLists.txt  package.xml  semantic_layer_plugin.xml
src/semantic_nav_costmap_plugins/include/semantic_nav_costmap_plugins/: semantic_layer.hpp
src/semantic_nav_costmap_plugins/src/: semantic_layer.cpp
src/semantic_nav_detector/: package.xml  setup.cfg  setup.py
src/semantic_nav_detector/semantic_nav_detector/: semantic_detector_node.py
src/semantic_nav_interfaces/: CMakeLists.txt  package.xml
src/semantic_nav_interfaces/msg/: SemanticObject.msg  SemanticObjectArray.msg
